docker/k8s/api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-ip-service

spec:
  type: ClusterIP
  selector:
    component: api
  ports:
    - port: 3000
      targetPort: 3000
